Added More Colors

--- a/BASICPROJECTS/ColorChanger/style.css
+++ b/BASICPROJECTS/ColorChanger/style.css
@@ -67,6 +67,9 @@ h2 {
 #Blue {
     background-color: blue;
 }
+#purple {
+    background-color: purple;
+}
 
 #Crimson {
     background-color: crimson;
